[tool.poetry]
name = "gogettr"
version = "0.9.0"
description = "Extraction tool for GETTR, a \"non-bias [sic] social network.\""
authors = ["Stanford Internet Observatory <mccain@stanford.edu>"]
license = "Apache-2.0"
homepage = "https://github.com/stanfordio/gogettr"
keywords = ["gettr", "scraper", "cli"]
packages = [
    {include = "gogettr"}
]
readme = "README.md"

[tool.poetry.scripts]
gogettr = "gogettr.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32"
click = "^8.1"
setuptools = "^75.2.0"

[tool.poetry.dev-dependencies]
black = "^24.8"
pytest = "^6.2.4"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
